# mtg-cards-per-set

./: .gitignore  README.md  legacy-scrapped-data.json  modern-scrapped-data.json  pyproject.toml  scrapped_data.json  scrapy.cfg  transmogrifier.py
mtg_tourney_scrapper/: items.py  middlewares.py  pipelines.py  settings.py
mtg_tourney_scrapper/overrides/extensions/: httpcache.py
mtg_tourney_scrapper/spiders/: mtggoldfish.py
visualizer/: README.md  disable.eslintrc.js  nuxt.config.js  package.json  stylelint.config.js
visualizer/layouts/: default.vue
visualizer/output_data/: sets.json
visualizer/output_data/legacy/: 10E.json  2ED.json  2XM.json  3ED.json  4BB.json  4ED.json  5DN.json  5ED.json  6ED.json  7ED.json  8ED.json  9ED.json  A25.json  AER.json  AFC.json  AFR.json  AJMP.json  AKH.json  AKR.json  ALA.json  ALL.json  ANB.json  APC.json  ARB.json  ARC.json  ARN.json  ATH.json  ATQ.json  AVR.json  BBD.json  BFZ.json  BNG.json  BOK.json  BRB.json  BTD.json  C13.json  C14.json  C15.json  C16.json  C17.json  (+358 more)
visualizer/output_data/modern/: 2ED.json  5DN.json  5ED.json  8ED.json  AER.json  AFC.json  AKH.json  AKR.json  APC.json  ARB.json  ARC.json  ATH.json  BRB.json  BTD.json  C14.json  C15.json  C17.json  C18.json  C19.json  CED.json  CHR.json  CMA.json  CMR.json  CNS.json  CP2.json  CP3.json  CSP.json  DD2.json  DDC.json  DDD.json  DDE.json  DDF.json  DDG.json  DDH.json  DDI.json  DDJ.json  DDL.json  DDM.json  DDP.json  DDS.json  (+148 more)
visualizer/output_data/sets/: 10E.json  2XM.json  3ED.json  4BB.json  4ED.json  6ED.json  7ED.json  (+209 more)
visualizer/pages/: index.vue
